# wgpu_testing

./: Cargo.toml  README.md  build.rs  conventions.txt
src/: bind_group_layouts.rs  bind_groups.rs  bit_voxels.rs  byte_grid.rs  displaced_chunks.rs  main.rs  map_3D.rs  octree_texture.rs  pipelines.rs  render_context.rs  resources.rs  shader_modules.rs  standard_voxel_prefab.rs
src/render/: bind_group_layouts.rs  bind_groups.rs  imgui.rs  mod.rs  pipelines.rs  render_context.rs  resource_views.rs  resources.rs
src/render/shader_data/: mod.rs  trace_frame.rs
src/shader_data/: trace_frame.rs
src/shaders/: cone_march.comp  depth_shade.comp  fill_bit_volume.comp  fill_sum_table.comp  gradient.comp  halve_bit_volume.comp  octree_march.comp  primary_march.comp  process.frag  screen.vert
src/shaders/failed/: stackless.glsl
src/shaders/sum/: sum.comp
src/spirv/: cone_march.comp.spv  depth_shade.comp.spv  fill_bit_volume.comp.spv  fill_sum_table.comp.spv  gradient.comp.spv  halve_bit_volume.comp.spv  octree_construct.comp.spv  octree_march.comp.spv  primary_march.comp.spv  process.frag.spv  screen.vert.spv  sum_0.comp.spv  sum_0.spv  sum_1.comp.spv  sum_1.spv  sum_2.comp.spv  sum_2.spv
