[package]
name = "gfx_testing"
version = "0.1.0"
authors = ["Andrew Choi <kimchy101@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
winit = "0.24.0"
wgpu = "0.6.2"
winit_input_helper = "0.9.0"
futures = "0.3.8"
bytemuck = "1.4.1"
nalgebra = "0.24.0"
indexmap = "1.6.1"

imgui-wgpu = "0.12.0"
imgui = "0.6.1"
imgui-winit-support = "0.6.1"
dot_vox = "4.1.0"
noise = "0.7"

[build-dependencies]
shaderc = "0.7.0"